# news_text_apps

./: .gitignore  PRD.md  README.md  app.py  db_utils.py  llm_utils.py  main.py  news_utils.py  pyproject.toml  requirements.txt  ui_components.py
assets/: style.css
