[project]
name = "news-text-apps"
version = "0.1.0"
description = "Real-time news collection and AI summarization service using Streamlit and OpenAI"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "streamlit",
    "pandas",
    "newspaper4k",
    "requests",
    "beautifulsoup4",
    "openai",
    "python-dotenv",
    "lxml_html_clean",
]

[tool.setuptools]
py-modules = ["app", "news_utils", "llm_utils", "db_utils"]
